# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import complaintsRouter from "./complaints";
 import ideasRouter from "./ideas";
 import newsRouter from "./news";
 import dashboardRouter from "./dashboard";
+import teamRouter from "./team";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use("/complaints", complaintsRouter);
 router.use("/ideas", ideasRouter);
 router.use("/news", newsRouter);
 router.use("/dashboard", dashboardRouter);
+router.use("/team", teamRouter);
 
 export default router;
